2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/TestPad.cs:
	* Services/UnitTest.cs:
	* Gui/TestResultsPad.cs:
	* Services/TestContext.cs:
	* Services/NUnitService.cs:
	* Commands/NUnitCommands.cs:
	* MonoDevelopNUnit.addin.xml:
	* Services/ExternalTestRunner.cs:
	* Services/NUnitAssemblyTestSuite.cs:
	* Services/NUnitProjectServiceExtension.cs: Added support for
	  running unit tests using a special execution mode (for
	  example, using the debugger).

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelopNUnit.addin.xml: Don't partially assembly-qualify
	  type name, as it makes .NET unhappy, and doesn't seem to be
	  necessary for Mono.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.NUnit.mds:
	* MonoDevelop.NUnit.mdp:
	* MonoDevelop.NUnit.csproj: Migrated to MSBuild file format.

2009-02-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopNUnit.addin.xml: Don't register the nunit package
	  if mono-nunit is installed and has the same version.

	* gtk-gui/generated.cs: Flush.

2009-02-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/UnitTestResult.cs: Getting the failure location
	  doesn't work very well. Disable for now.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelopNUnit.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.NUnit.mdp: Flush.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.NUnit.mds:
	* MonoDevelop.NUnit.mdp:
	* NUnitRunner/NUnitRunner.mdp: Flush project format changes.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* NUnitRunner/NUnitTestRunner.cs: Make sure that only the provided test
	suite is executed.

2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/ExternalTestRunner.cs: Add a default test result message when
	none is provided.

	* Gui/TestResultsPad.cs:
	* Gui/TestNodeBuilder.cs: