@@ -1,3 +1,9 @@
+2009-02-19  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Services/NUnitAssemblyTestSuite.cs: Modify the test
+	  collection in the gui thread, to avoid concurrent access.
+	  Fixes bug #469131 - Random IOE exception.
+
 2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Gui/TestPad.cs:
